# pall8t

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  Containerfile  LICENSE  README.md  mise.toml  pall8t.toml
.claude/: settings.json
.claude/skills/pall8t/: SKILL.md
.claude/skills/release/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
.pall8t/: Containerfile  config.toml
docs/: release.md  requirements.md
docs/adr/: 0001-implementation-language.md  0002-rename-to-pall8t.md  0003-multiplexer-pivot.md  0004-workspace-model.md  0005-session-holders.md  0006-drop-tui.md
docs/design/: DESIGN.md  home-compositor.md
docs/specs/: home-compositor-evaluation.md  home-compositor.md
rules/: claude.toml
scripts/: lint.sh
src/: app.rs  config.rs  container.rs  detect.rs  filer.rs  herdr.rs  holder.rs  home.rs  image.rs  lib.rs  main.rs  mux.rs  proto.rs  registry.rs  repos.rs  spawn.rs  ui.rs  util.rs  workspace.rs  worktree.rs
src/home/: tests.rs
