[package]
name = "pall8t"
version = "0.3.0"
edition = "2021"
description = "Run AI coding agents in apple/container sandboxes — a minimal agent multiplexer TUI"
license = "MIT"
repository = "https://github.com/TakiTake/pall8t"

[[bin]]
name = "pall8t"
path = "src/main.rs"

[[bin]]
name = "pall8t-tab"
path = "src/bin/pall8t-tab.rs"

[lib]
name = "pall8t"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "5"
portable-pty = "0.9"
ratatui = "0.29"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
unicode-width = "0.2"
vt100 = "0.15"
