[package]
name = "pall8t"
version = "0.4.0"
edition = "2021"
description = "Run AI coding agents in apple/container sandboxes — a headless sandbox runner"
license = "MIT"
repository = "https://github.com/TakiTake/pall8t"

[[bin]]
name = "pall8t"
path = "src/main.rs"

[lib]
name = "pall8t"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
